# PixelEd

./: README.md
src/: CMakeLists.txt
src/PixelEd/: CMakeLists.txt  editor.cpp  editor.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/PixelEd/Widgets/: consolewidget.cpp  consolewidget.h  consolewidget.ui
